--- a/src/app/frontend/package.json
+++ b/src/app/frontend/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~8.2.11",
     "@auth0/angular-jwt": "^3.0.0",
     "bootstrap": "^4.3.1",
+    "class-transformer": "^0.2.3",
     "ngx-bootstrap": "^5.2.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
