--- a/src/app/frontend/package.json
+++ b/src/app/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@angular/upgrade": "^8.2.12",
     "@auth0/angular-jwt": "^3.0.0",
     "bootstrap": "^4.3.1",
     "class-transformer": "^0.2.3",
